Update other pages

--- a/environment.html
+++ b/environment.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   Contact Us
+   ESI Asia Pacific Pty Ltd
   </title>
   <link href="css/bootstrap.css" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
@@ -19,19 +19,12 @@
   </script>
   <script defer="" src="js/jquery.main.js">
   </script>
-  <script async="" defer="" src="https://www.google.com/recaptcha/api.js">
-  </script>
-  <script>
-   function onSubmit(token) {
-          document.getElementById("contact-form").submit();
-        }
-  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-contactus">
+  <header class="banner banner-homepage header">
    <nav class="navbar navbar-expand-lg">
     <ul class="navbar-nav">
      <li class="nav-item">
@@ -116,118 +109,98 @@
      </li>
     </ul>
    </nav>
-   <div class="banner-text banner-text-contact">
-    <h1>
-     Contact Us
-    </h1>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col-md-6">
+      <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col-md-6">
+        <h1>
+         Connect with
+        </h1>
+        <h1>
+         us today!
+        </h1>
+      <h1>
+       — today
+      </h1>
+     </div>
+    </div>
    </div>
   </header>
+  <main class="content-block">
+    <div class="environment-header">
+        <h1>
+            Environment, Social and Governance
+        </h1>
+    </div>
+    <div class="row">
+        <div class="col-md-4 ">
+            <img src="images/About-Solar.svg" style="max-width: 137px;"/>
+        </div>
+        <div class="col-md-8 environment-text">
+            <p>ESI products are completely sustainable and 100 per cent recyclable. The iron flow batteries have a 10 to 14-hour storage capacity and 25 year lifecycle. The environmentally friendly electrolyte also means that the product is ideally suited to remote locations such as the National Parks and the Great Barrier Reef.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <img src="images/About-Handshake.svg" style="max-width: 137px;"/>
+        </div>
+        <div class="col-md-8 environment-text">
+            <p>ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <img src="images/About-Team.svg" style="max-width: 137px;"/>
+        </div>
+        <div class="col-md-8 environment-text">
+            <p>ESI is run by a board and executive team that has decades of experience in the energy, manufacturing, technology and finance sectors. Importantly, they have a deep, end-to-end understanding of the energy value chain from technical operation of assets to energy trading.</p>
+        </div>
+    </div>
+
+  </main>
+  <footer>
+   <section class="contact">
+    <div class="footer-information">
+     <a class="footer-logo" href="/">
+      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+     </a>
+     <div class="footer-contacts">
+      <h4 class="contact-text">
+       CONTACT
+      </h4>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        room
+       </i>
+       <p class="ml-2">
+        Brisbane, Australia
+       </p>
+      </div>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        mail
+       </i>
+       <p class="ml-2">
+        info@esiap.com.au
+       </p>
+      </div>
+     </div>
+    </div>
+   </section>
+   <section class="footer-background">
+    <div class="footer navbar-expand-lg navbar">
+     <span class="mr-auto">
+      © 2021 All rights reserved.
+     </span>
+     <a class="footer-icon-container" href="https://twitter.com/ess_info">
+      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+     </a>
+    </div>
+   </section>
+  </footer>
  </body>
 </html>
-<main class="content-block">
- <img src="images/contact-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   OUR CONTACT INFO
-  </h2>
- </div>
- <div class="contact-page-info">
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    room
-   </i>
-   <h2>
-    Address
-   </h2>
-   <p>
-    2/11 Morrison Close,
-   </p>
-   <p>
-    Mansfield 4122
-   </p>
-   <p>
-    Queensland
-   </p>
-  </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    today
-   </i>
-   <h2>
-    Working Time
-   </h2>
-   <p>
-    Monday - Friday — 08:00 - 16:00
-   </p>
-   <p>
-    Saturday — Closed
-   </p>
-   <p>
-    Sunday — Closed
-   </p>
-  </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    email
-   </i>
-   <h2>
-    Email
-   </h2>
-   <p>
-    info@esiap.com.au
-   </p>
-  </div>
- </div>
- <img src="images/mail-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   CONTACT FORM
-  </h2>
- </div>
- <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
-  <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
-  <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
-  <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
-  <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" type="submit" value="Send"/>
- </form>
-</main>
-<footer>
- <section class="contact">
-  <div class="footer-information">
-   <a class="footer-logo" href="/">
-    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-   </a>
-   <div class="footer-contacts">
-    <h4 class="contact-text">
-     CONTACT
-    </h4>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      room
-     </i>
-     <p class="ml-2">
-      Brisbane, Australia
-     </p>
-    </div>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      mail
-     </i>
-     <p class="ml-2">
-      info@esiap.com.au
-     </p>
-    </div>
-   </div>
-  </div>
- </section>
- <section class="footer-background">
-  <div class="footer navbar-expand-lg navbar">
-   <span class="mr-auto">
-    © 2021 All rights reserved.
-   </span>
-   <a class="footer-icon-container" href="https://twitter.com/ess_info">
-    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-   </a>
-  </div>
- </section>
-</footer>
