--- a/chemistry.html
+++ b/chemistry.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   Contact Us
+   ESI Asia Pacific Pty Ltd
   </title>
   <link href="css/bootstrap.css" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
@@ -19,19 +19,12 @@
   </script>
   <script defer="" src="js/jquery.main.js">
   </script>
-  <script async="" defer="" src="https://www.google.com/recaptcha/api.js">
-  </script>
-  <script>
-   function onSubmit(token) {
-          document.getElementById("contact-form").submit();
-        }
-  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-contactus">
+  <header class="banner banner-product header">
    <nav class="navbar navbar-expand-lg">
     <ul class="navbar-nav">
      <li class="nav-item">
@@ -116,118 +109,95 @@
      </li>
     </ul>
    </nav>
-   <div class="banner-text banner-text-contact">
-    <h1>
-     Contact Us
-    </h1>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col-md-6">
+        <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col-md-6">
+      <h1>
+       Energy when you
+       <br/>
+       need it most
+      </h1>
+     </div>
+    </div>
    </div>
   </header>
+  <main class="content-block">
+    <div class="text-column chemistry-header">
+        <h1>Technology Overveiw</h1>
+    </div>
+    <div class="text-column">
+        <p>The DESS technology chosen is from ESS,Inc (NYSE:GWH) a Portland, US based company, producing an Iron-  Flow battery. The device consists of iron, salt and water chemistry and can _be either deployed in containers or  in a large scale grid connected warehouse.</p>
+    </div>
+
+    <div class="text-column chemistry-header">
+      <h3>Iron Chloride Flow Battery</h3>
+    </div>
+    <div class="text-column">
+        <ul>
+            <li>Also known as Redox Flow Battery (reduction-oxidation)</li>
+            <li>Electrochemical storage device with unlimited charge/discharge cycles</li>
+            <li>Electrical energy drives chemical change in the electrolyte, which flows through electrochemical cell</li>
+        </ul>
+        <p>During charging:</p>
+        <p>\(\ce{Fe^{II}Cl2 + 2e- <-> Fe + 2Cl-}\) -0.44V (negative electrode)</p>
+        <p>\(\ce{2Fe^{II}Cl2 + Cl- <-> 2Fe^{III}Cl3 + 2e-}\) +0.77V (positive electrode)</p>
+          
+        <p>During discharge: 	equations reverse</p>
+        <img src="images/Chemistry.jpg"/>
+  </main>
+  <footer>
+   <section class="contact">
+    <div class="footer-information">
+     <a class="footer-logo" href="/">
+      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+     </a>
+     <div class="footer-contacts">
+      <h4 class="contact-text">
+       CONTACT
+      </h4>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        room
+       </i>
+       <p class="ml-2">
+        Brisbane, Australia
+       </p>
+      </div>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        mail
+       </i>
+       <p class="ml-2">
+        info@esiap.com.au
+       </p>
+      </div>
+     </div>
+    </div>
+   </section>
+   <section class="footer-background">
+    <div class="footer navbar-expand-lg navbar">
+     <span class="mr-auto">
+      © 2021 All rights reserved.
+     </span>
+     <a class="footer-icon-container" href="https://twitter.com/ess_info">
+      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+     </a>
+    </div>
+   </section>
+  </footer>
+  <!-- For browsers that do not support MathML: -->
+  <script>
+    window.MathJax = {
+      tex: {
+        // inlineMath: [['$', '$'], ['\\(', '\\)']],
+        packages: {'[+]': ['mhchem']}
+      },
+      loader: {load: ['[tex]/mhchem']},
+    };
+  </script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
  </body>
 </html>
-<main class="content-block">
- <img src="images/contact-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   OUR CONTACT INFO
-  </h2>
- </div>
- <div class="contact-page-info">
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    room
-   </i>
-   <h2>
-    Address
-   </h2>
-   <p>
-    2/11 Morrison Close,
-   </p>
-   <p>
-    Mansfield 4122
-   </p>
-   <p>
-    Queensland
-   </p>
-  </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    today
-   </i>
-   <h2>
-    Working Time
-   </h2>
-   <p>
-    Monday - Friday — 08:00 - 16:00
-   </p>
-   <p>
-    Saturday — Closed
-   </p>
-   <p>
-    Sunday — Closed
-   </p>
-  </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    email
-   </i>
-   <h2>
-    Email
-   </h2>
-   <p>
-    info@esiap.com.au
-   </p>
-  </div>
- </div>
- <img src="images/mail-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   CONTACT FORM
-  </h2>
- </div>
- <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
-  <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
-  <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
-  <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
-  <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" type="submit" value="Send"/>
- </form>
-</main>
-<footer>
- <section class="contact">
-  <div class="footer-information">
-   <a class="footer-logo" href="/">
-    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-   </a>
-   <div class="footer-contacts">
-    <h4 class="contact-text">
-     CONTACT
-    </h4>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      room
-     </i>
-     <p class="ml-2">
-      Brisbane, Australia
-     </p>
-    </div>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      mail
-     </i>
-     <p class="ml-2">
-      info@esiap.com.au
-     </p>
-    </div>
-   </div>
-  </div>
- </section>
- <section class="footer-background">
-  <div class="footer navbar-expand-lg navbar">
-   <span class="mr-auto">
-    © 2021 All rights reserved.
-   </span>
-   <a class="footer-icon-container" href="https://twitter.com/ess_info">
-    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-   </a>
-  </div>
- </section>
-</footer>
