--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   Contact Us
+   ESI Asia Pacific Pty Ltd
   </title>
   <link href="css/bootstrap.css" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
@@ -19,19 +19,12 @@
   </script>
   <script defer="" src="js/jquery.main.js">
   </script>
-  <script async="" defer="" src="https://www.google.com/recaptcha/api.js">
-  </script>
-  <script>
-   function onSubmit(token) {
-          document.getElementById("contact-form").submit();
-        }
-  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-contactus">
+  <header class="banner banner-news header">
    <nav class="navbar navbar-expand-lg">
     <ul class="navbar-nav">
      <li class="nav-item">
@@ -116,118 +109,66 @@
      </li>
     </ul>
    </nav>
-   <div class="banner-text banner-text-contact">
-    <h1>
-     Contact Us
-    </h1>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col-md-6">
+      <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col-md-6">
+      <h1>
+       Natrual elements
+       <br/>
+       for a brighter future
+      </h1>
+     </div>
+    </div>
    </div>
   </header>
+  <main class="content-block">
+    
+    <div class="text-column news-header">
+        <h1>News &amp; Media</h1>
+    </div>
+  </main>
+  <footer>
+   <section class="contact">
+    <div class="footer-information">
+     <a class="footer-logo" href="/">
+      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+     </a>
+     <div class="footer-contacts">
+      <h4 class="contact-text">
+       CONTACT
+      </h4>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        room
+       </i>
+       <p class="ml-2">
+        Brisbane, Australia
+       </p>
+      </div>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        mail
+       </i>
+       <p class="ml-2">
+        info@esiap.com.au
+       </p>
+      </div>
+     </div>
+    </div>
+   </section>
+   <section class="footer-background">
+    <div class="footer navbar-expand-lg navbar">
+     <span class="mr-auto">
+      © 2021 All rights reserved.
+     </span>
+     <a class="footer-icon-container" href="https://twitter.com/ess_info">
+      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+     </a>
+    </div>
+   </section>
+  </footer>
  </body>
 </html>
-<main class="content-block">
- <img src="images/contact-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   OUR CONTACT INFO
-  </h2>
- </div>
- <div class="contact-page-info">
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    room
-   </i>
-   <h2>
-    Address
-   </h2>
-   <p>
-    2/11 Morrison Close,
-   </p>
-   <p>
-    Mansfield 4122
-   </p>
-   <p>
-    Queensland
-   </p>
-  </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    today
-   </i>
-   <h2>
-    Working Time
-   </h2>
-   <p>
-    Monday - Friday — 08:00 - 16:00
-   </p>
-   <p>
-    Saturday — Closed
-   </p>
-   <p>
-    Sunday — Closed
-   </p>
-  </div>
-  <div class="contact-page-box">
-   <i class="material-icons" style="color: #71b6d5">
-    email
-   </i>
-   <h2>
-    Email
-   </h2>
-   <p>
-    info@esiap.com.au
-   </p>
-  </div>
- </div>
- <img src="images/mail-line.png" style="text-align: center"/>
- <div class="text-column" style="padding: 0 0 0 0">
-  <h2 style="text-align: center">
-   CONTACT FORM
-  </h2>
- </div>
- <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
-  <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
-  <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
-  <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
-  <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" type="submit" value="Send"/>
- </form>
-</main>
-<footer>
- <section class="contact">
-  <div class="footer-information">
-   <a class="footer-logo" href="/">
-    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-   </a>
-   <div class="footer-contacts">
-    <h4 class="contact-text">
-     CONTACT
-    </h4>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      room
-     </i>
-     <p class="ml-2">
-      Brisbane, Australia
-     </p>
-    </div>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      mail
-     </i>
-     <p class="ml-2">
-      info@esiap.com.au
-     </p>
-    </div>
-   </div>
-  </div>
- </section>
- <section class="footer-background">
-  <div class="footer navbar-expand-lg navbar">
-   <span class="mr-auto">
-    © 2021 All rights reserved.
-   </span>
-   <a class="footer-icon-container" href="https://twitter.com/ess_info">
-    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-   </a>
-  </div>
- </section>
-</footer>
