--- a/careers.html
+++ b/careers.html
@@ -62,18 +62,28 @@
        Products &amp; services
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/technology">
-        Technology
+       <a class="nav-link btn" href="/introduction">
+        Introduction
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="dropdown-item btn btn-sub" href="/applications">
-        Applications
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
        </a>
       </div>
      </li>
      <li class="nav-item">
-      <a class="nav-link btn" data-toggle="dropdown" href="/">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
        Operations
       </a>
       <div class="dropdown-menu">
@@ -84,16 +94,6 @@
        </div>
        <a class="dropdown-item btn btn-sub" href="/townsville">
         Townsville
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/randd">
-        Research and development
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/partners">
-        Partners
        </a>
       </div>
      </li>
@@ -116,71 +116,77 @@
      </div>
      <div class="col-md-6">
       <h1>
-       
-        Connect with
-    </h1>
-    <h1>
-     us today!
-    </h1>
-  <h1>
-   — today
-  </h1>
- </div>
-</div>
-</div>
-</header>
-<main class="content-block">
-<div class="environment-header">
-    <h1>
-        Careers
-    </h1>
-    <p>
-        When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland. </p>
-    <p>Longer-term, we have significant export ambitions — to be a provider of large-scale and small, modular distributed energy storage solutions to the Pacific Islands and South East Asia.</p>
-    <p>If you are interested to work for ESI, please <a href="/contact">contact us</a>.</p>
-
-    </div>
-</div>
-  </main>
-  <footer>
-   <section class="contact">
-    <div class="footer-information">
-     <a class="footer-logo" href="/">
-      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-     </a>
-     <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
-      </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
+       Connect with
+      </h1>
+      <h1>
+       us today!
+      </h1>
+      <h1>
+       — today
+      </h1>
      </div>
     </div>
-   </section>
-   <section class="footer-background">
-    <div class="footer navbar-expand-lg navbar">
-     <span class="mr-auto">
-      © 2021 All rights reserved.
-     </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+   </div>
+  </header>
+  <main class="content-block">
+   <div class="environment-header">
+    <h1>
+     Careers
+    </h1>
+    <p>
+     When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland.
+    </p>
+    <p>
+     Longer-term, we have significant export ambitions — to be a provider of large-scale and small, modular distributed energy storage solutions to the Pacific Islands and South East Asia.
+    </p>
+    <p>
+     If you are interested to work for ESI, please
+     <a href="/contact">
+      contact us
      </a>
-    </div>
-   </section>
-  </footer>
+     .
+    </p>
+   </div>
+  </main>
  </body>
 </html>
+<footer>
+ <section class="contact">
+  <div class="footer-information">
+   <a class="footer-logo" href="/">
+    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+   </a>
+   <div class="footer-contacts">
+    <h4 class="contact-text">
+     CONTACT
+    </h4>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      room
+     </i>
+     <p class="ml-2">
+      Brisbane, Australia
+     </p>
+    </div>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      mail
+     </i>
+     <p class="ml-2">
+      info@esiap.com.au
+     </p>
+    </div>
+   </div>
+  </div>
+ </section>
+ <section class="footer-background">
+  <div class="footer navbar-expand-lg navbar">
+   <span class="mr-auto">
+    © 2022 All rights reserved.
+   </span>
+   <a class="footer-icon-container" href="https://twitter.com/ess_info">
+    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+   </a>
+  </div>
+ </section>
+</footer>
