--- a/history.html
+++ b/history.html
@@ -62,18 +62,28 @@
        Products &amp; services
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/technology">
-        Technology
+       <a class="nav-link btn" href="/introduction">
+        Introduction
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="dropdown-item btn btn-sub" href="/applications">
-        Applications
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
        </a>
       </div>
      </li>
      <li class="nav-item">
-      <a class="nav-link btn" data-toggle="dropdown" href="/">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
        Operations
       </a>
       <div class="dropdown-menu">
@@ -84,16 +94,6 @@
        </div>
        <a class="dropdown-item btn btn-sub" href="/townsville">
         Townsville
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/randd">
-        Research and development
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/partners">
-        Partners
        </a>
       </div>
      </li>
@@ -173,7 +173,7 @@
    <section class="footer-background">
     <div class="footer navbar-expand-lg navbar">
      <span class="mr-auto">
-      © 2021 All rights reserved.
+      © 2022 All rights reserved.
      </span>
      <a class="footer-icon-container" href="https://twitter.com/ess_info">
       <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
