--- a/introduction.html
+++ b/introduction.html
@@ -25,11 +25,94 @@
  </head>
  <body>
   <header class="banner banner-product header">
-   <nav></nav>
+   <nav class="navbar navbar-expand-lg">
+    <ul class="navbar-nav">
+     <li class="nav-item">
+      <a class="nav-link btn" href="/">
+       Home
+      </a>
+     </li>
+     <li class="nav-item dropdown">
+      <a class="nav-link btn" data-toggle="dropdown" href="/about">
+       About Us
+      </a>
+      <div class="dropdown-menu">
+       <a class="dropdown-item btn btn-sub" href="/board">
+        Board
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/senior">
+        Senior Mangement
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/environment">
+        Environment, Social and Governance
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/careers">
+        Careers
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/">
+       Products &amp; services
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/introduction">
+        Introduction
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
+       Operations
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/maryborough">
+        Maryborough
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/townsville">
+        Townsville
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/news">
+       News and media
+      </a>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/contact">
+       Contact
+      </a>
+     </li>
+    </ul>
+   </nav>
    <div class="banner-text">
     <div class="row">
      <div class="col-md-6">
-        <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
+      <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
      </div>
      <div class="col-md-6">
       <h1>
@@ -42,35 +125,62 @@
    </div>
   </header>
   <main class="content-block">
-
-    <div class="text-column chemistry-header">
-        <h1>A Safe, reliable and sustainable Battery System</h1>
-    </div>
-
-    <p>The DESS technology chosen is from ESS,Inc (NYSE:GWH) a Portland, US based company, producing an Iron-  Flow battery. The device consists of iron, salt and water chemistry and can be either deployed in containers or  in a large scale grid connected warehouse.</p>
-    
-    <div class="text-column chemistry-header">
-        <h3>Battery Capability</h3>
-    </div>
-    <ul>
-        <li>6 - 14 Hours Energy Storage</li>
-        <li>Module design allows for 400KWh to 1GWh+ installation</li>
-        <li>20,000+ cycling capability with no degradation regardless of duty cycle</li>
-        <li>25+ year lifetime</li>
-        <li>Munich RE 10 year warranty</li>
-        <li>Wide operating range - 5C to 50C</li>
-        <li>Non-toxic, non-flammable, 100% recyclable</li>
-        <li>No toxicity, fire, chemical or explosion risk</li>
-        <li>No precious metals, materials or hard to source components</li>
-        <li>Energy can be stored charged for extended periods and not lose charge</li>
-        <li>Suitable for close proximity to residential areas as well as in remote and inhospitable conditions.</li>
-    </ul>
-    <div class="text-column chemistry-header">
-        <h3>Exceeding the market’s requirements... and expectations</h3>
-    </div>
-    <p>ESIAP is transforming the value proposition for long duration energy storage.</p>
-    
-
+   <div class="text-column chemistry-header">
+    <h1>
+     A Safe, reliable and sustainable Battery System
+    </h1>
+   </div>
+   <p>
+    The DESS technology chosen is from ESS,Inc (NYSE:GWH) a Portland, US based company, producing an Iron-  Flow battery. The device consists of iron, salt and water chemistry and can be either deployed in containers or  in a large scale grid connected warehouse.
+   </p>
+   <div class="text-column chemistry-header">
+    <h3>
+     Battery Capability
+    </h3>
+   </div>
+   <ul>
+    <li>
+     6 - 14 Hours Energy Storage
+    </li>
+    <li>
+     Module design allows for 400KWh to 1GWh+ installation
+    </li>
+    <li>
+     20,000+ cycling capability with no degradation regardless of duty cycle
+    </li>
+    <li>
+     25+ year lifetime
+    </li>
+    <li>
+     Munich RE 10 year warranty
+    </li>
+    <li>
+     Wide operating range - 5C to 50C
+    </li>
+    <li>
+     Non-toxic, non-flammable, 100% recyclable
+    </li>
+    <li>
+     No toxicity, fire, chemical or explosion risk
+    </li>
+    <li>
+     No precious metals, materials or hard to source components
+    </li>
+    <li>
+     Energy can be stored charged for extended periods and not lose charge
+    </li>
+    <li>
+     Suitable for close proximity to residential areas as well as in remote and inhospitable conditions.
+    </li>
+   </ul>
+   <div class="text-column chemistry-header">
+    <h3>
+     Exceeding the market’s requirements... and expectations
+    </h3>
+   </div>
+   <p>
+    ESIAP is transforming the value proposition for long duration energy storage.
+   </p>
   </main>
   <footer>
    <section class="contact">
@@ -104,7 +214,7 @@
    <section class="footer-background">
     <div class="footer navbar-expand-lg navbar">
      <span class="mr-auto">
-      © 2021 All rights reserved.
+      © 2022 All rights reserved.
      </span>
      <a class="footer-icon-container" href="https://twitter.com/ess_info">
       <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
