--- a/solutions.html
+++ b/solutions.html
@@ -62,18 +62,28 @@
        Products &amp; services
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/technology">
-        Technology
+       <a class="nav-link btn" href="/introduction">
+        Introduction
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="dropdown-item btn btn-sub" href="/applications">
-        Applications
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
        </a>
       </div>
      </li>
      <li class="nav-item">
-      <a class="nav-link btn" data-toggle="dropdown" href="/">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
        Operations
       </a>
       <div class="dropdown-menu">
@@ -84,16 +94,6 @@
        </div>
        <a class="dropdown-item btn btn-sub" href="/townsville">
         Townsville
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/randd">
-        Research and development
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/partners">
-        Partners
        </a>
       </div>
      </li>
@@ -128,63 +128,75 @@
    </div>
   </header>
   <main class="content-block">
-
-    <div class="chemistry-header">
-        <h1>
-            Environment, Social and Governance
-        </h1>
-        <p>The modular design of our products allows for ESI to deliver across multiple industry uses:</p>
+   <div class="chemistry-header">
+    <h1>
+     Environment, Social and Governance
+    </h1>
+    <p>
+     The modular design of our products allows for ESI to deliver across multiple industry uses:
+    </p>
+   </div>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="row">
-        <div class="col-md-4 ">
-            <img src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
-        </div>
-        <div class="col-md-8 chemistry-header">
-            <h3>Utility</h3>
-            <p>Large scale installations of medium duration (10 hour) storage from 20MW to 1GW integrating into existing
-                Transmission connections enabling an orderly transition from fossil fuel generation to Renewable sources</p>
-        </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Utility
+     </h3>
+     <p>
+      Large scale installations of medium duration (10 hour) storage from 20MW to 1GW integrating into existing
+                Transmission connections enabling an orderly transition from fossil fuel generation to Renewable sources
+     </p>
     </div>
-
-
-    <div class="row">
-        <div class="col-md-4">
-            <img src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
-        </div>
-        <div class="col-md-8 chemistry-header">
-            <h3>Transmission/Distribution</h3>
-            <p>the advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
+   </div>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Transmission/Distribution
+     </h3>
+     <p>
+      the advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
                 points, utilising grid forming inverters, grid operators are able to stabilize the grid whilst enabling deeper
-                distributed and transmission renewable penetration.</p>
-        </div>
+                distributed and transmission renewable penetration.
+     </p>
     </div>
-    
-
-    <div class="row">
-        <div class="col-md-4">
-            <img src="images/P_S-Solutions-Commercial-Icon.svg" style="max-width: 137px;"/>
-        </div>
-        <div class="col-md-8 chemistry-header">
-            <h3>Commercial and industrial</h3>
-            <p>Localised generation will be a key part of a clean energy grid. Large scale commercial and industrial users are
+   </div>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="images/P_S-Solutions-Commercial-Icon.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Commercial and industrial
+     </h3>
+     <p>
+      Localised generation will be a key part of a clean energy grid. Large scale commercial and industrial users are
                 able to take control of their energy costs via small scale generation and accompanying storage. ESI’s modular
                 product allows for all Commercial and Industrial (from small to large) users to limit their draw from the grid.
-                Environmentally friendly and with no flammable risk, the storage is able to be installed in most locations.</p>
-        </div>
+                Environmentally friendly and with no flammable risk, the storage is able to be installed in most locations.
+     </p>
     </div>
-
-    <div class="row">
-        <div class="col-md-4">
-            <img src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
-        </div>
-        <div class="col-md-8 chemistry-header">
-            <h3>Rural, Remote and Island</h3>
-            <p>De-carbonisation of the rural, remote and Island networks are an integral part of a zero carbon emission grid.
+   </div>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Rural, Remote and Island
+     </h3>
+     <p>
+      De-carbonisation of the rural, remote and Island networks are an integral part of a zero carbon emission grid.
                 Scalable stand alone power systems that can integrate renewable generation, storage, load management
                 systems and back up generation capacity (diesel generation, compressed air, Hydrogen fuel cells) can be
-                adapted to meet the largest to the smallest of load requirements.</p>
-        </div>
+                adapted to meet the largest to the smallest of load requirements.
+     </p>
     </div>
+   </div>
   </main>
   <footer>
    <section class="contact">
@@ -218,7 +230,7 @@
    <section class="footer-background">
     <div class="footer navbar-expand-lg navbar">
      <span class="mr-auto">
-      © 2021 All rights reserved.
+      © 2022 All rights reserved.
      </span>
      <a class="footer-icon-container" href="https://twitter.com/ess_info">
       <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
