--- a/transition.html
+++ b/transition.html
@@ -24,12 +24,95 @@
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-    <header class="banner banner-product header">
-   <nav></nav>
+  <header class="banner banner-product header">
+   <nav class="navbar navbar-expand-lg">
+    <ul class="navbar-nav">
+     <li class="nav-item">
+      <a class="nav-link btn" href="/">
+       Home
+      </a>
+     </li>
+     <li class="nav-item dropdown">
+      <a class="nav-link btn" data-toggle="dropdown" href="/about">
+       About Us
+      </a>
+      <div class="dropdown-menu">
+       <a class="dropdown-item btn btn-sub" href="/board">
+        Board
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/senior">
+        Senior Mangement
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/environment">
+        Environment, Social and Governance
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/careers">
+        Careers
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/">
+       Products &amp; services
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/introduction">
+        Introduction
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
+       Operations
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/maryborough">
+        Maryborough
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/townsville">
+        Townsville
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/news">
+       News and media
+      </a>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/contact">
+       Contact
+      </a>
+     </li>
+    </ul>
+   </nav>
    <div class="banner-text">
     <div class="row">
      <div class="col-md-6">
-        <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
+      <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
      </div>
      <div class="col-md-6">
       <h1>
@@ -42,11 +125,15 @@
    </div>
   </header>
   <main class="content-block">
-       <div class="text-column chemistry-header">
-        <h1>Supporting a stable energy transition</h1>
-        <p>ESI’s technology is transforming the value proposition for long duration energy storage.</p>
-        <img src="images/Energy Trans-Table.jpg" alt="Features and advantages"/>
-        </div>
+   <div class="text-column chemistry-header">
+    <h1>
+     Supporting a stable energy transition
+    </h1>
+    <p>
+     ESI’s technology is transforming the value proposition for long duration energy storage.
+    </p>
+    <img alt="Features and advantages" src="images/Energy Trans-Table.jpg"/>
+   </div>
   </main>
   <footer>
    <section class="contact">
@@ -80,7 +167,7 @@
    <section class="footer-background">
     <div class="footer navbar-expand-lg navbar">
      <span class="mr-auto">
-      © 2021 All rights reserved.
+      © 2022 All rights reserved.
      </span>
      <a class="footer-icon-container" href="https://twitter.com/ess_info">
       <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
