--- a/board.html
+++ b/board.html
@@ -62,18 +62,28 @@
        Products &amp; services
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/technology">
-        Technology
+       <a class="nav-link btn" href="/introduction">
+        Introduction
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="dropdown-item btn btn-sub" href="/applications">
-        Applications
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
        </a>
       </div>
      </li>
      <li class="nav-item">
-      <a class="nav-link btn" data-toggle="dropdown" href="/">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
        Operations
       </a>
       <div class="dropdown-menu">
@@ -84,16 +94,6 @@
        </div>
        <a class="dropdown-item btn btn-sub" href="/townsville">
         Townsville
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/randd">
-        Research and development
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/partners">
-        Partners
        </a>
       </div>
      </li>
@@ -136,13 +136,19 @@
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-        Peter Brindley
+      Peter Brindley
      </h3>
-     <h5>Executive Chairman</h5>
+     <h5>
+      Executive Chairman
+     </h5>
      <p>
-        Peter has a wealth of senior executive experience, together with 20 years' board experience, with organisations such as Origin Energy, Lightsource BP, RACV, ICI, Dulux and Orica, within Australia, New Zealand and the UK. Gaining specialist expertise across industries from renewable energy and consumer services to health, aged care and superannuation.</p>
-        <p>With 25 years of general management experience, Peter moved into renewable energy in 2015 and was immediately drawn to the critical role this burgeoning sector has to play in addressing the climate change challenges. Leading Origin Energy's launch of battery storage, EV activities and solar maintenance services, Peter has been at the forefront of the growth in energy storage in Australia from those first early steps. Applying his deep strategic skills and capabilities in leading high-quality operational execution of new product categories, he understands the challenges and opportunities presented when new markets are opened up.</p>
-        <p>Peter is a non-executive director of Business Excellence Australia and past director of numerous organisations across health and aged care, chemicals, paints and superannuation.        
+      Peter has a wealth of senior executive experience, together with 20 years' board experience, with organisations such as Origin Energy, Lightsource BP, RACV, ICI, Dulux and Orica, within Australia, New Zealand and the UK. Gaining specialist expertise across industries from renewable energy and consumer services to health, aged care and superannuation.
+     </p>
+     <p>
+      With 25 years of general management experience, Peter moved into renewable energy in 2015 and was immediately drawn to the critical role this burgeoning sector has to play in addressing the climate change challenges. Leading Origin Energy's launch of battery storage, EV activities and solar maintenance services, Peter has been at the forefront of the growth in energy storage in Australia from those first early steps. Applying his deep strategic skills and capabilities in leading high-quality operational execution of new product categories, he understands the challenges and opportunities presented when new markets are opened up.
+     </p>
+     <p>
+      Peter is a non-executive director of Business Excellence Australia and past director of numerous organisations across health and aged care, chemicals, paints and superannuation.
      </p>
     </div>
    </div>
@@ -152,17 +158,25 @@
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-      Stuart Parry</h3>
-      <h5>Director
+      Stuart Parry
+     </h3>
+     <h5>
+      Director
      </h5>
-     <p>Stuart is an internationally experienced executive, lecturer and Chartered Accountant who has a depth of experience across a wide range of public sector and commercial areas including finance, procurement, risk management and strategy.</p>
      <p>
-        He has worked as an executive across funds management, financial management and financial accounting in Australia, the US and UK. Prior to establishing his own consultancy Stuart worked as a Chartered Accountant with leading global firms including Ernst & Young, Prudential (UK) Wilhelmsen Investments and Brookfield Asset Management.</p>
-        <p>
-        As an experienced member of international company group audit and risk committees, Stuart has a solid understanding of international finance and accounting issues. He has managed virtual teams focusing on strategic finance and accounting issues for major listed companies in Europe and North America.</p>
-        <p>
-        Stuart holds a Master of Commerce from the University of Sydney and a Bachelor of Commerce (Accounting and Economics) from the University of Queensland.</p>
+      Stuart is an internationally experienced executive, lecturer and Chartered Accountant who has a depth of experience across a wide range of public sector and commercial areas including finance, procurement, risk management and strategy.
+     </p>
      <p>
+      He has worked as an executive across funds management, financial management and financial accounting in Australia, the US and UK. Prior to establishing his own consultancy Stuart worked as a Chartered Accountant with leading global firms including Ernst &amp; Young, Prudential (UK) Wilhelmsen Investments and Brookfield Asset Management.
+     </p>
+     <p>
+      As an experienced member of international company group audit and risk committees, Stuart has a solid understanding of international finance and accounting issues. He has managed virtual teams focusing on strategic finance and accounting issues for major listed companies in Europe and North America.
+     </p>
+     <p>
+      Stuart holds a Master of Commerce from the University of Sydney and a Bachelor of Commerce (Accounting and Economics) from the University of Queensland.
+     </p>
+     <p>
+     </p>
     </div>
    </div>
   </main>
@@ -198,7 +212,7 @@
    <section class="footer-background">
     <div class="footer navbar-expand-lg navbar">
      <span class="mr-auto">
-      © 2021 All rights reserved.
+      © 2022 All rights reserved.
      </span>
      <a class="footer-icon-container" href="https://twitter.com/ess_info">
       <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
