--- a/environment.html
+++ b/environment.html
@@ -62,18 +62,28 @@
        Products &amp; services
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/technology">
-        Technology
+       <a class="nav-link btn" href="/introduction">
+        Introduction
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="dropdown-item btn btn-sub" href="/applications">
-        Applications
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
        </a>
       </div>
      </li>
      <li class="nav-item">
-      <a class="nav-link btn" data-toggle="dropdown" href="/">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
        Operations
       </a>
       <div class="dropdown-menu">
@@ -84,16 +94,6 @@
        </div>
        <a class="dropdown-item btn btn-sub" href="/townsville">
         Townsville
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/randd">
-        Research and development
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/partners">
-        Partners
        </a>
       </div>
      </li>
@@ -115,12 +115,12 @@
       <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
      </div>
      <div class="col-md-6">
-        <h1>
-         Connect with
-        </h1>
-        <h1>
-         us today!
-        </h1>
+      <h1>
+       Connect with
+      </h1>
+      <h1>
+       us today!
+      </h1>
       <h1>
        — today
       </h1>
@@ -129,38 +129,41 @@
    </div>
   </header>
   <main class="content-block">
-    <div class="environment-header">
-        <h1>
-            Environment, Social and Governance
-        </h1>
+   <div class="environment-header">
+    <h1>
+     Environment, Social and Governance
+    </h1>
+   </div>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="images/About-Solar.svg" style="max-width: 137px;"/>
     </div>
-    <div class="row">
-        <div class="col-md-4 ">
-            <img src="images/About-Solar.svg" style="max-width: 137px;"/>
-        </div>
-        <div class="col-md-8 environment-text">
-            <p>ESI products are completely sustainable and 100 per cent recyclable. The iron flow batteries have a 10 to 14-hour storage capacity and 25 year lifecycle. The environmentally friendly electrolyte also means that the product is ideally suited to remote locations such as the National Parks and the Great Barrier Reef.</p>
-        </div>
+    <div class="col-md-8 environment-text">
+     <p>
+      ESI products are completely sustainable and 100 per cent recyclable. The iron flow batteries have a 10 to 14-hour storage capacity and 25 year lifecycle. The environmentally friendly electrolyte also means that the product is ideally suited to remote locations such as the National Parks and the Great Barrier Reef.
+     </p>
     </div>
-
-    <div class="row">
-        <div class="col-md-4">
-            <img src="images/About-Handshake.svg" style="max-width: 137px;"/>
-        </div>
-        <div class="col-md-8 environment-text">
-            <p>ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland.</p>
-        </div>
+   </div>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="images/About-Handshake.svg" style="max-width: 137px;"/>
     </div>
-
-    <div class="row">
-        <div class="col-md-4">
-            <img src="images/About-Team.svg" style="max-width: 137px;"/>
-        </div>
-        <div class="col-md-8 environment-text">
-            <p>ESI is run by a board and executive team that has decades of experience in the energy, manufacturing, technology and finance sectors. Importantly, they have a deep, end-to-end understanding of the energy value chain from technical operation of assets to energy trading.</p>
-        </div>
+    <div class="col-md-8 environment-text">
+     <p>
+      ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland.
+     </p>
     </div>
-
+   </div>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="images/About-Team.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 environment-text">
+     <p>
+      ESI is run by a board and executive team that has decades of experience in the energy, manufacturing, technology and finance sectors. Importantly, they have a deep, end-to-end understanding of the energy value chain from technical operation of assets to energy trading.
+     </p>
+    </div>
+   </div>
   </main>
   <footer>
    <section class="contact">
@@ -194,7 +197,7 @@
    <section class="footer-background">
     <div class="footer navbar-expand-lg navbar">
      <span class="mr-auto">
-      © 2021 All rights reserved.
+      © 2022 All rights reserved.
      </span>
      <a class="footer-icon-container" href="https://twitter.com/ess_info">
       <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
