--- a/senior.html
+++ b/senior.html
@@ -62,18 +62,28 @@
        Products &amp; services
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/technology">
-        Technology
+       <a class="nav-link btn" href="/introduction">
+        Introduction
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="dropdown-item btn btn-sub" href="/applications">
-        Applications
+       <a class="nav-link btn" href="/transition">
+        Energy Transition
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/chemistry">
+        Chemistry
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="nav-link btn" href="/solutions">
+        Solutions
        </a>
       </div>
      </li>
      <li class="nav-item">
-      <a class="nav-link btn" data-toggle="dropdown" href="/">
+      <a class="nav-link btn" data-toggle="dropdown" href="/operations">
        Operations
       </a>
       <div class="dropdown-menu">
@@ -84,16 +94,6 @@
        </div>
        <a class="dropdown-item btn btn-sub" href="/townsville">
         Townsville
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/randd">
-        Research and development
-       </a>
-       <div class="dropdown-divider">
-       </div>
-       <a class="dropdown-item btn btn-sub" href="/partners">
-        Partners
        </a>
       </div>
      </li>
@@ -115,74 +115,105 @@
       <img alt="ESI Asia Pacific Pty Ltd" src="images/Home-Logo.png"/>
      </div>
      <div class="col-md-6">
-        <h1>
-         Connect with
-        </h1>
-        <h1>
-         us today!
-        </h1>
-       </div>
-      </div>
+      <h1>
+       Connect with
+      </h1>
+      <h1>
+       us today!
+      </h1>
      </div>
-    </header>
-    <main class="content-block">
-        <div class="our-team-content">
-            <div class="our-team-image-column">
-                <img src="images/Morris.png"/>
-            </div>
-            <div class="text-column our-team-text-column">
-                <h3>
-                    Peter Morris
-                </h3>
-                <h5>CEO</h5>
-                <p>Peter has extensive professional experience in senior corporate office and operational roles in multinational companies (Enron Europe, Conoco, BHP Billiton), government and public entities (Queensland Electricity Commission, Queensland Transmission and Supply Corporation) within the energy and mining sectors. His areas of expertise include marketing and trading, customer relationship and market development, contract negotiation, operations and project management, as well as integration of companies, new businesses and strategies.</p>
-                <p>After working exclusively in Australian electricity markets during his early career, he relocated overseas to work in the UK, Netherlands, USA and Singapore over a 12-year period. The business areas were UK and European Power and Gas energy markets; uranium markets in North America and Europe; and worldwide iron ore, coking and steaming coal markets.</p>
-                <p>Peter holds a BEng (Electrical and Computer Engineering) and was awarded a PhD from Queensland University of Technology through research investigating successful energy peak demand reduction in a community of 2000 people from a technical, economic and social perspective. He continued his academic research at the University of Queensland in areas of climate change policy and the integration of environmental, economic, and social outcomes.</p>
-                </div>
-        </div>
-        <div class="our-team-content">
-            <div class="our-team-image-column">
-                <img src="images/Kevin.png"/>
-            </div>
-            <div class="text-column our-team-text-column">
-                <h3>
-                    Kevin Mobbs
-                </h3>
-                <h5>General Manager of Manufacturing</h5>
-                <p>Kevin Mobbs is an experienced Global Executive in the commercial and technical management of large scale and utility grade electrical projects. During his 35 years of experience, Kevin has held Executive roles for Multinational Groups, such as Schneider Electric, and other national groups as CEO, COO in addition to various Directorships.</p>
-                <p>Kevin has built and led experienced executive teams which have successfully established manufacturing and supply chain capabilities for various new products, as well as optimising processes for existing facilities. These products range from customised and complex electrical power systems to high volume electronic based assemblies. Supply chain sourcing and negotiations also form a key part of Kevin's focus and skills to balance the high risk that exists between supply security, quality and cost efficiencies. This experience combined with extensive and real world experience in generation, distribution and the control of electrical infrastructure and power systems, Kevin is a proven leader in building and managing Executive and Professional Teams for delivering successful outcomes.</p>                    
-                </div>
-        </div>
-        <div class="our-team-content">
-            <div class="our-team-image-column">
-                <img src="images/Mathews.png"/>
-            </div>
-            <div class="text-column our-team-text-column">
-                <h3>
-                    Peter Matthews
-                </h3>
-                <h5>CEO</h5>
-                <p>With an extensive career in the Electrical installation and Services Industry, Peter is a highly respected and experienced Executive and Innovator. From small beginnings in 2009, with a focus on delivery and quality, Peter has founded and developed the National Deployment and Services company. Solar Service Guys, which is the largest specialist national group of its type.</p>
-                <p>Peter's success can be demonstrated through having National contracts for the provision of specialist electrical services and installations to National Energy Retailers, International Technology Manufacturers and other major industry partners.</p>
-                <p>Peter has refined his expertise in the Renewables field and has invested into engineering and IT systems. This investment and Leadership has resulted in long term relationships and partnerships with key manufactures including ABB, Canadian Solar, SMA, LG Chem, Trina and national retailing and energy grid clients such as Origin, ERM, Red Energy, Energy Queensland, and Light Source BP. As a highly respected Leader and award-winning Entrepreneur, Peter is a member on the Advisory Board of the Master Electricians of Australia and also advises other major industry groups.</p>
-                </div>
-        </div>
-        <div class="our-team-content">
-            <div class="our-team-image-column">
-                <img src="images/Ian.png"/>
-            </div>
-            <div class="text-column our-team-text-column">
-                <h3>
-                    Ian Connor
-                </h3>
-                <h5>Chief Technology Officer (CTO)</h5>
-                <p>Ian is an experienced CTO and entrepreneur. He has spent over 20 years in the USA, Europe and Australia, refining and implementing processes required to build software and manage software teams the right way.</p>
-                <p>Previously, Ian was CTO and co-founder of Pubget Inc. based in Boston, USA, a research platform serving researchers and clinicians at over 600 hospitals and research institutions worldwide. Pubget grew from serving local entities, like Harvard University, MIT, and Massachusetts General Hospital - to support various worldwide organizations - from Fortune 500 companies and the top-10 universities to biotechs and individual research groups. The Copyright Clearance Center acquired Pubget.</p>
-                <p>Post-acquisition, Ian moved back to Brisbane, Australia, where he continues to follow test-driven development "TDD" and advocate lean startup methodologies. Ian has also spent over a year as a senior consultant in an electric vehicle charging manufacturing company. The initial goals were around helping increase their velocity and quality through DevOps and Testing. It evolved to include everything from firmware and credit card processing to grid monitoring and power electronics performance and monitoring.</p>
-                <p>Software Skills: Python, C/C++, Tensorflow, AWS, git, DevOps, Typescript, Javascript, Java, and a big fan of continuous integration, testing frameworks, static analysis, electronics, and agile development. Specialties: scientific and artificial intelligence software development. Ian holds degrees in Physics/Maths and Law.</p>
-            </div>
-        </div>
-
+    </div>
+   </div>
+  </header>
+  <main class="content-block">
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img src="images/Morris.png"/>
+    </div>
+    <div class="text-column our-team-text-column">
+     <h3>
+      Peter Morris
+     </h3>
+     <h5>
+      CEO
+     </h5>
+     <p>
+      Peter has extensive professional experience in senior corporate office and operational roles in multinational companies (Enron Europe, Conoco, BHP Billiton), government and public entities (Queensland Electricity Commission, Queensland Transmission and Supply Corporation) within the energy and mining sectors. His areas of expertise include marketing and trading, customer relationship and market development, contract negotiation, operations and project management, as well as integration of companies, new businesses and strategies.
+     </p>
+     <p>
+      After working exclusively in Australian electricity markets during his early career, he relocated overseas to work in the UK, Netherlands, USA and Singapore over a 12-year period. The business areas were UK and European Power and Gas energy markets; uranium markets in North America and Europe; and worldwide iron ore, coking and steaming coal markets.
+     </p>
+     <p>
+      Peter holds a BEng (Electrical and Computer Engineering) and was awarded a PhD from Queensland University of Technology through research investigating successful energy peak demand reduction in a community of 2000 people from a technical, economic and social perspective. He continued his academic research at the University of Queensland in areas of climate change policy and the integration of environmental, economic, and social outcomes.
+     </p>
+    </div>
+   </div>
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img src="images/Kevin.png"/>
+    </div>
+    <div class="text-column our-team-text-column">
+     <h3>
+      Kevin Mobbs
+     </h3>
+     <h5>
+      General Manager of Manufacturing
+     </h5>
+     <p>
+      Kevin Mobbs is an experienced Global Executive in the commercial and technical management of large scale and utility grade electrical projects. During his 35 years of experience, Kevin has held Executive roles for Multinational Groups, such as Schneider Electric, and other national groups as CEO, COO in addition to various Directorships.
+     </p>
+     <p>
+      Kevin has built and led experienced executive teams which have successfully established manufacturing and supply chain capabilities for various new products, as well as optimising processes for existing facilities. These products range from customised and complex electrical power systems to high volume electronic based assemblies. Supply chain sourcing and negotiations also form a key part of Kevin's focus and skills to balance the high risk that exists between supply security, quality and cost efficiencies. This experience combined with extensive and real world experience in generation, distribution and the control of electrical infrastructure and power systems, Kevin is a proven leader in building and managing Executive and Professional Teams for delivering successful outcomes.
+     </p>
+    </div>
+   </div>
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img src="images/Mathews.png"/>
+    </div>
+    <div class="text-column our-team-text-column">
+     <h3>
+      Peter Matthews
+     </h3>
+     <h5>
+      CEO
+     </h5>
+     <p>
+      With an extensive career in the Electrical installation and Services Industry, Peter is a highly respected and experienced Executive and Innovator. From small beginnings in 2009, with a focus on delivery and quality, Peter has founded and developed the National Deployment and Services company. Solar Service Guys, which is the largest specialist national group of its type.
+     </p>
+     <p>
+      Peter's success can be demonstrated through having National contracts for the provision of specialist electrical services and installations to National Energy Retailers, International Technology Manufacturers and other major industry partners.
+     </p>
+     <p>
+      Peter has refined his expertise in the Renewables field and has invested into engineering and IT systems. This investment and Leadership has resulted in long term relationships and partnerships with key manufactures including ABB, Canadian Solar, SMA, LG Chem, Trina and national retailing and energy grid clients such as Origin, ERM, Red Energy, Energy Queensland, and Light Source BP. As a highly respected Leader and award-winning Entrepreneur, Peter is a member on the Advisory Board of the Master Electricians of Australia and also advises other major industry groups.
+     </p>
+    </div>
+   </div>
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img src="images/Ian.png"/>
+    </div>
+    <div class="text-column our-team-text-column">
+     <h3>
+      Ian Connor
+     </h3>
+     <h5>
+      Chief Technology Officer (CTO)
+     </h5>
+     <p>
+      Ian is an experienced CTO and entrepreneur. He has spent over 20 years in the USA, Europe and Australia, refining and implementing processes required to build software and manage software teams the right way.
+     </p>
+     <p>
+      Previously, Ian was CTO and co-founder of Pubget Inc. based in Boston, USA, a research platform serving researchers and clinicians at over 600 hospitals and research institutions worldwide. Pubget grew from serving local entities, like Harvard University, MIT, and Massachusetts General Hospital - to support various worldwide organizations - from Fortune 500 companies and the top-10 universities to biotechs and individual research groups. The Copyright Clearance Center acquired Pubget.
+     </p>
+     <p>
+      Post-acquisition, Ian moved back to Brisbane, Australia, where he continues to follow test-driven development "TDD" and advocate lean startup methodologies. Ian has also spent over a year as a senior consultant in an electric vehicle charging manufacturing company. The initial goals were around helping increase their velocity and quality through DevOps and Testing. It evolved to include everything from firmware and credit card processing to grid monitoring and power electronics performance and monitoring.
+     </p>
+     <p>
+      Software Skills: Python, C/C++, Tensorflow, AWS, git, DevOps, Typescript, Javascript, Java, and a big fan of continuous integration, testing frameworks, static analysis, electronics, and agile development. Specialties: scientific and artificial intelligence software development. Ian holds degrees in Physics/Maths and Law.
+     </p>
+    </div>
+   </div>
   </main>
   <footer>
    <section class="contact">
@@ -216,7 +247,7 @@
    <section class="footer-background">
     <div class="footer navbar-expand-lg navbar">
      <span class="mr-auto">
-      © 2021 All rights reserved.
+      © 2022 All rights reserved.
      </span>
      <a class="footer-icon-container" href="https://twitter.com/ess_info">
       <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
