--- a/contact.html
+++ b/contact.html
@@ -69,22 +69,22 @@
        Products &amp; services
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/introduction">
+       <a class="dropdown-item btn btn-sub" href="/introduction">
         Introduction
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="nav-link btn" href="/transition">
+       <a class="dropdown-item btn btn-sub" href="/transition">
         Energy Transition
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="nav-link btn" href="/chemistry">
+       <a class="dropdown-item btn btn-sub" href="/chemistry">
         Chemistry
        </a>
        <div class="dropdown-divider">
        </div>
-       <a class="nav-link btn" href="/solutions">
+       <a class="dropdown-item btn btn-sub" href="/solutions">
         Solutions
        </a>
       </div>
@@ -94,7 +94,7 @@
        Operations
       </a>
       <div class="dropdown-menu">
-       <a class="nav-link btn" href="/maryborough">
+       <a class="dropdown-item btn btn-sub" href="/maryborough">
         Maryborough
        </a>
        <div class="dropdown-divider">
